--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,36 @@
             .catch(err => console.log('Error:', err))
         })
       }
+
+      Notification.requestPermission(function(status) {
+          console.log('Notification permission status:', status);
+      });
+
+      function displayNotification() {
+        if (Notification.permission == 'granted') {
+          navigator.serviceWorker.getRegistration().then(function(reg) {
+            let options = {
+              body: 'New weather changes in Helsinki',
+              icon: 'images/logo.png',
+              vibrate: [100, 50, 100],
+              data: {
+                dateOfArrival: Date.now(),
+                primaryKey: 1
+              },
+              actions: [
+                {action: 'explore', title: 'Explore this new world',
+                  icon: 'images/checkmark.png'},
+                {action: 'close', title: 'Close notification',
+                  icon: 'images/xmark.png'},
+              ]
+            };
+            reg.showNotification('Get the latest weather information now!', options);
+          });
+        }
+      }
+      setInterval(() => {
+        displayNotification();
+      }, 5000);
     </script>
   </body>
 </html>
